# tosx

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
apps/: CMakeLists.txt
apps/include/fs/: RomFileSystem.h
apps/include/misc/: Clear.h  CountDown.h  CpuTest.h  Echo.h  Free.h  Init.h  List.h  LongTask.h  MemStatus.h  MemTest.h  Null.h  PiTask.h  Ps.h  RandomTest.h  Uptime.h
apps/include/shell/: CommandLine.h  Console.h  ExecutableFile.h  Shell.h  ShellCommand.h
apps/src/shell/: CommandLine.cpp  ExecutableFile.cpp  Shell.cpp
arch/arm/: arm.cmake  libopencm3.cmake  lm4f.cmake  stm32g474.cmake
arch/arm/cmake/: toolchain-arm-none-eabi-gcc.cmake
arch/arm/lm4f/: Lm4fCpu.h  Main.cpp  SerialPort0.h  cortex-m-generic.ld  lm4f.ld
arch/arm/stm32g474/: Main.cpp  Mutex.cpp  SerialPort0.h  Stm32RandomProvider.h  Stm32g474Cpu.h  stm32g474.ld
arch/avr/: atmega328p.cmake  atmega32u4.cmake
arch/avr/atmega328p/: Main.cpp  SerialPort0.h
arch/avr/atmega32u4/: Main.cpp  SerialPort0.h
avr/: atmega328p.cmake  atmega32u4.cmake  flash.sh
avr/atmega328p/: Main.cpp  SerialPort0.cpp  SerialPort0.h
avr/atmega32u4/: Main.cpp  SerialPort0.cpp  SerialPort0.h
avr/generic/: AVRContextSwitching.h  AVRCpu.cpp  AVRCpu.h
kernel/: CMakeLists.txt
kernel/tests/: CMakeLists.txt  Main.cpp  tests.tst
lib/: CMakeLists.txt
lib/tests/: CMakeLists.txt
lib/tests/collections/: ArrayListTest.cpp  ArrayTest.cpp  CircularQueueTest.cpp  FragmentedTextTest.cpp  LinkedListTest.cpp  PriorityQueueTest.cpp  StaticPriorityQueueTest.cpp
tests/: CMakeLists.txt
(+110 files in other folders)
